<resources>
    <string name="app_name">E-Learning</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result_">Result_Activity</string>
    <string name="title_activity_result__content">Result_Content</string>
    <string name="title_activity_lesson_"></string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_profile">Profile</string>

    <string name="title_basic_lesson">Basic lesson</string>
    <string name="title_activity_category_activity">Category</string>
    <string name="title_back">Back</string>
    <string name="title_done">Done</string>
    <string name="text_basic">Basic</string>
    <string name="text_advance">Advance</string>
    <string name="text_expert">Expert</string>
    <string name="title_activity_word_list_">Word List</string>
    <string name="button_next">Next</string>
    <string name="country_prompt">Choose a country</string>

    <string-array name="level_array">
        <item>All</item>
        <item>Basic</item>
        <item>Advance</item>
        <item>Expert</item>
    </string-array>
    <string-array name="status_array">
        <item>All</item>
        <item>Learned</item>
        <item>Not learn</item>
    </string-array>
    <string name="title_activity_lesson_advance_activity">lesson_advance_activity</string>
    <string name="title_activity_lesson_expert_activity">Lesson_expert_activity</string>
    <string name="text_expert_lesson">Expert lesson</string>
    <string name="text_advance_lesson">Advance Lesson</string>
    <string name="text_basic_lesson">Basic lesson</string>
    <string name="text_word_list">Words list</string>
    <string name="text_category">Category</string>
    <string name="text_profile">Profile</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_updated">Update</string>
    <string name="text_back">Back</string>
    <string name="text_pdf">PDF</string>
    <string name="text_done">Done</string>


</resources>
