<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="group8.com.e_learning.Category_activity"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:id="@+id/toolbar_actionBar"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/text_category"
            android:gravity="center"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:clickable="true"
        android:id="@+id/layout_basic"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/alert_light_frame"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:id="@+id/image_categories_basic"
            android:duplicateParentState="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_basic"
            android:layout_toRightOf="@id/image_categories_basic"
            android:layout_alignParentTop="true"
            android:id="@+id/text_basic"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="you are..."
            android:layout_below="@id/text_basic"
            android:layout_toRightOf="@id/image_categories_basic"
            android:id="@+id/text_comment"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="word, word, word"
            android:layout_below="@id/text_comment"
            android:layout_toRightOf="@id/image_categories_basic"

            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:width="1dp"
        android:background="@android:color/black"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:clickable="true"
        android:id="@+id/layout_advance"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/alert_light_frame"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:id="@+id/image_categories_advance"
            android:duplicateParentState="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_advance"
            android:layout_toRightOf="@id/image_categories_advance"
            android:layout_alignParentTop="true"
            android:id="@+id/text_advance"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="you are..."
            android:layout_below="@id/text_advance"
            android:layout_toRightOf="@id/image_categories_advance"
            android:id="@+id/text_comment2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="word, word, word"
            android:layout_below="@id/text_comment2"
            android:layout_toRightOf="@id/image_categories_advance"

            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:width="1dp"
        android:background="@android:color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_expert"
        android:onClick="onClick"
        android:clickable="true"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/alert_light_frame"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:id="@+id/image_categories_expert"



            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_expert"
            android:layout_toRightOf="@id/image_categories_expert"
            android:layout_alignParentTop="true"
            android:id="@+id/text_expert"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="you are..."
            android:layout_below="@id/text_expert"
            android:layout_toRightOf="@id/image_categories_expert"
            android:id="@+id/text_comment3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="word, word, word"
            android:layout_below="@id/text_comment3"
            android:layout_toRightOf="@id/image_categories_expert"

            />

    </RelativeLayout>

</LinearLayout>
