<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_actionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"

            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

            >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cancel"
                    android:id="@+id/button_cancel"
                    android:onClick="onClick"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/text_update_profile"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_updated"
                    android:id="@+id/button_update"
                    android:onClick="onClick"
                    />



            </LinearLayout>

        </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="14dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:gravity="center_vertical"
            android:text="Email"
            android:textColor="#039BE5"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/emailshape"
            android:editable="false"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text="nguyenvana@gmail.com"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:gravity="center_vertical"
            android:text="Old Password"
            android:textColor="#039BE5"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/recshape"
            android:focusable="true"
            android:password="true"
            android:hint="Old Password"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:gravity="center_vertical"
            android:text="New Password"
            android:textColor="#039BE5"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/recshape"
            android:hint="New Password"
            android:password="true"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:gravity="center_vertical"
            android:text="Retype password"
            android:textColor="#039BE5"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/recshape"
            android:hint="Retype password"
            android:password="true"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_description_black_24dp"
            android:gravity="center_vertical"
            android:text="Full name"
            android:textColor="#039BE5"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/recshape"
            android:hint="Full name"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                android:gravity="center_vertical"
                android:text="Avatar"
                android:textColor="#039BE5"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@drawable/recshape"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/avata" />
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>

</ScrollView>